--- a/drupal/sites/all/themes/leidos/css/sass/partials/modules/_static-fixed-nav.scss
+++ b/drupal/sites/all/themes/leidos/css/sass/partials/modules/_static-fixed-nav.scss
@@ -37,6 +37,13 @@
         iframe {
             margin: 20px 0;
         }
+        span {
+            float: left;
+
+            + span {
+                margin-left: 10px;
+            }
+        }
     }
     .sticky-wrapper {
         @include clearfix;
